cluster/apps/authelia/authelia/authelia-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-db
  namespace: authelia
spec:
  ports:
    - name: authelia-db
      port: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/instance: authelia-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-db
  namespace: authelia
  labels:
    app.kubernetes.io/instance: authelia-db
  annotations:
    reloader.stakater.com/search: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia-db
    spec:
      restartPolicy: Always
      containers:
        - name: authelia-db
          image: postgres:15.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: authelia-db
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: authelia-db-vol
      volumes:
        - name: authelia-db-vol
          persistentVolumeClaim:
            claimName: authelia-db-pvc
---
