cluster/apps/authelia/authelia/authelia-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-redis
  namespace: authelia
spec:
  ports:
    - name: authelia-redis
      port: 6379
      protocol: TCP
  selector:
    app.kubernetes.io/instance: authelia-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-redis
  namespace: authelia
  labels:
    app.kubernetes.io/instance: authelia-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia-redis
    spec:
      restartPolicy: Always
      containers:
        - name: authelia-redis
          image: redis:7.4.0
          command:
            - redis-server
            - "/redis-master/redis.conf"
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: config
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: authelia-redis-config
            items:
              - key: redis-config
                path: redis.conf
---
