cluster/apps/authelia/authelia/authelia.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: authelia
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`auth.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: authelia
          namespace: authelia
          port: 80
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
  updateStrategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
    spec:
      restartPolicy: Always
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4.37.5
          imagePullPolicy: IfNotPresent
          command: ["authelia"]
          args:
            - --config=/configuration.yaml
          resources:
            limits: {}
            requests: {}
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          volumeMounts:
            - mountPath: /configuration.yaml
              name: config
              readOnly: true
              subPath: configuration.yaml
            - mountPath: /secrets
              name: secrets
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: authelia
            items:
              - key: configuration.yaml
                path: configuration.yaml
        - name: secrets
          secret:
            secretName: authelia
            items:
              - key: JWT_TOKEN
                path: JWT_TOKEN
              - key: SESSION_ENCRYPTION_KEY
                path: SESSION_ENCRYPTION_KEY
              - key: STORAGE_ENCRYPTION_KEY
                path: STORAGE_ENCRYPTION_KEY
              - key: STORAGE_PASSWORD
                path: STORAGE_PASSWORD
              - key: IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY_FILE
                path: IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY_FILE
              - key: IDENTITY_PROVIDERS_OIDC_HMAC_SECRET_FILE
                path: IDENTITY_PROVIDERS_OIDC_HMAC_SECRET_FILE
